# spireslayer

./: .gitignore  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: python-package.yml
example/: example.py
source/spireslayer/: card.py  deck.py  decks.py  editor.py
source/tests/: test_card.py  test_deck.py  test_editor.py
src/spireslayer/: card.py  decks.py  editor.py
src/tests/: test_card.py  test_editor.py
